[*] DynamicList performance improvements